force-app/main/default/objects/Outreach_Summary__c/Outreach_Summary__c.object-meta.xml
<CustomObject>
    <label>Outreach Summary</label>
    <nameField>
        <label>Outreach Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outreach Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>