force-app/main/default/objects/Outreach_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outreach Summaries</relationshipLabel>
    <relationshipName>Outreach_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>