force-app/main/default/objects/Outreach_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outreach Summaries</relationshipLabel>
    <relationshipName>Outreach_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>