force-app/main/default/objects/Outreach_Summary__c/fields/Content_Body_Plain__c.field-meta.xml
<CustomField>
    <fullName>Content_Body_Plain__c</fullName>
    <label>Content Body (Plain)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>