force-app/main/default/objects/Outreach_Summary__c/fields/Content_Body_Rich__c.field-meta.xml
<CustomField>
    <fullName>Content_Body_Rich__c</fullName>
    <label>Content Body (Rich)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>