force-app/main/default/objects/Outreach_Summary__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host</label>
    <referenceTo>Hosts__c</referenceTo>
    <relationshipLabel>Outreach Summaries</relationshipLabel>
    <relationshipName>Outreach_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>