force-app/main/default/objects/Outreach_Summary__c/fields/Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Time__c</fullName>
    <label>Send Time</label>
    <type>DateTime</type>
</CustomField>