force-app/main/default/objects/Outreach_Summary__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Promotional</fullName>
            </value>
            <value>
                <fullName>Teaser</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Rescheduling</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>